# clog

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  cliff.toml  flake.nix  release.sh  rust-toolchain.toml  rustfmt.toml  toolchain.toml
.github/workflows/: artifacts.yml  integrity.yml
src/: cli.rs  clipboard.rs  collection.rs  constants.rs  index.rs  main.rs  multi_writer.rs  parsing.rs  retrieval.rs  search.rs  upstreaming.rs  util.rs  writing.rs
