[package]
name = "clog"
version = "0.3.0"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A utility for pulling information from a Git commit log in a repo."

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["wrap_help"] }
lazy_static = "1.4"
regex = "1.7"
