[package]
name = "clog"
version = "0.8.0" # Managed by `release.sh`
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zedseven/clog"
homepage = "https://github.com/zedseven/clog"
description = """\
A utility for pulling information from the Git commit log of a repo, then processing it into actionable data. \
The name comes from the phrase \"Commit Log\", but you can also think of it as the variety of shoe.\
"""

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["wrap_help"] }
copypasta = "0.10"
linked_hash_set = "0.1"
regex = "1.7"
shell-words = "1.1"
